Minor alignment fixes.

--- a/Readmember/scss/styles.scss
+++ b/Readmember/scss/styles.scss
@@ -283,7 +283,7 @@ a {
 
 .section-intro {
 	margin: 0 auto;
-	padding: 0 2em;
+	padding: 0 2em 0 2.5em;
 	max-width: 900px;
 
 	.section-title {
@@ -352,7 +352,7 @@ a {
 	max-width: 900px;
 
 	.feed-item {
-		padding: 2em;
+		padding: 2em 0.5em;
 		margin: 0 2em;
 		border-bottom: 1px solid $borders;
 		overflow: hidden;
